# ai-code-sessions

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  changelog.md  cli.md  config.md  ctx.md  development.md  native-session-changelog-repair.md  privacy.md  pypi.md  skills.md  source-matching.md  troubleshooting.md
docs/ai/: lessons.md
docs/plans/: 2026-03-11-skill-packaging-and-onboarding-design.md  2026-03-11-skill-packaging-and-onboarding-implementation-plan.md  2026-03-28-native-session-changelog-sync-design.md
docs/todo/: 2026-03-01-claude-cli-single-binary.md  2026-03-03-release-0.1.8.md  2026-03-10-repo-refamiliarization.md  2026-03-11-docs-release-and-publish.md  2026-03-11-setup-helper-tools-and-windows-guidance.md  2026-03-11-setup-preflight-command-override-bugfix.md  2026-03-28-fast-review-changelog-sync.md  2026-03-28-native-session-changelog-sync-implementation-plan.md  2026-03-28-native-sync-bakeoff-plan.md  (+18 more)
tests/: conftest.py  test_all.py  test_changelog_created_at.py  test_changelog_evaluator_errors.py  test_changelog_evaluator_subprocess.py  test_changelog_sync.py  test_changelog_usage_limit_detection.py  test_changelog_validation.py  test_claude_source_matching.py  test_cli_backfill_concurrency.py  test_cli_changelog.py  test_cli_error_paths.py  test_cli_flows.py  test_cli_setup_web_export_backfill.py  test_core_parsing_pipelines.py  test_generate_html.py  test_html_generation_helpers.py  test_legacy_prompt_jsonl_recovery.py  test_search_index_and_repo_detection.py  test_templates_and_gist.py
(+16 files in other folders)
